@@ -1,5 +1,9 @@
 2003-11-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
+	* library/demos/widget, etc.: Made widget demos locate themselves
+	independently of the main Tk library using the new global variable
+	tk_demoDirectory.  [Patch 832691, adapted]
+
 	* generic/tkTextDisp.c (TextGetScrollInfoObj): Stop complaints
 	about signed vs. unsigned for the length of strings.
 
